force-app/main/default/objects/GearSet_CICD__c/GearSet_CICD__c.object-meta.xml
<CustomObject>
    <label>GearSet CICD</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>GearSet CICD No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GearSets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>