force-app/main/default/objects/GearSet_CICD__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <label>Demo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>