force-app/main/default/objects/GearSet_CICD__c/fields/Demo_CICD__c.field-meta.xml
<CustomField>
    <fullName>Demo_CICD__c</fullName>
    <label>Demo CICD</label>
    <length>40</length>
    <type>Text</type>
</CustomField>