force-app/main/default/objects/GearSet_CICD__c/fields/Demo_Gearset__c.field-meta.xml
<CustomField>
    <fullName>Demo_Gearset__c</fullName>
    <label>Demo Gearset</label>
    <length>20</length>
    <type>Text</type>
</CustomField>