force-app/main/default/objects/GearSet_CICD__c/fields/Gearset_Demo__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Demo__c</fullName>
    <label>Gearset Demo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>